Fixed blurring on supported devices

--- a/css/vikehacks.css
+++ b/css/vikehacks.css
@@ -28,6 +28,13 @@ h1, h2, h3, h4, h5, h6 {
     header{
         -webkit-backdrop-filter: blur(5px);
         backdrop-filter: blur(5px);
+        background-color:#000000AA;
+    }
+}
+
+@supports not (backdrop-filter:blur(5px)){
+    header{
+        background-color:black;
     }
 }
 
@@ -41,7 +48,6 @@ header {
     /*transition: background-color 1s;*/
     width: 100%;
     z-index: 2;
-    background-color:#000000;
     height:75px;
 }
 
